<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.acme.csci3130_demo.MainActivity"

    >

    <TextView
        android:id="@+id/viewAntoNieva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NAME"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <Button
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="16dp"
        android:onClick="menonClick"
        android:text="Info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/state"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="44dp"
        android:onClick="menonClick"
        android:text="State"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pass"
        app:layout_constraintStart_toEndOf="@+id/info" />

    <Button
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="44dp"
        android:onClick="menonClick"
        android:text="Pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/state" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="179dp"
        android:layout_marginEnd="155dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="25dp"
        android:text="B00692432"
        app:layout_constraintBottom_toTopOf="@+id/state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAntoNieva"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="179dp"
        android:layout_marginEnd="97dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="25dp"
        android:text="Faculty of Computer Science"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAntoNieva" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="145dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="16dp"
        android:text="Undergraduate"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="105dp"
        android:layout_marginEnd="129dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="16dp"
        android:text="Dalhousie University"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="35dp"
        android:text="Modify"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="208dp"
        android:text="Old password"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="78dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/viewAntoNieva" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="New password"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/editText3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="77dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
    android:id="@+id/confirm"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="37dp"
    android:layout_marginEnd="148dp"
    android:layout_marginStart="148dp"
    android:text="Confirm"
    android:visibility="gone"
    app:layout_constraintBottom_toTopOf="@+id/state"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
